[package]
name = "xpring"
version = "0.0.10"
authors = ["Javier Romero <elmurci@gmail.com>"]
edition = "2018"
build = "build.rs"
repository = "https://github.com/elmurci/xpring-rs"
license = "MIT"
keywords = ["xrp", "xrp_ledger", "xpring", "crypto"]
homepage = "https://github.com/elmurci/xpring-rs"
documentation = "https://docs.rs/xpring/"
description = "Rust client-side library for the XRP Ledger"
readme = "README.md"

[dependencies]
anyhow = "1.0.28"
fehler = "1.0.0-alpha.2"
serde = { version = "1.0.105", features = ["derive"] }
serde_json = "1.0.48"
hex = "0.4.2"
tonic = "0.1.1"
tokio = { version = "0.2", features = ["macros"] }
prost = "0.6.1"

[dev-dependencies]
mockall = "0.7.0"

[build-dependencies]
tonic-build = { version = "0.1.1", default-features = false, features = ["transport"] }